# marag-agent

./: PROJECT_STRUCTURE.md
agents/: .env  .gitignore  ARCHITECTURE.md  README_NEW.md  agent_response.json  db.json  env_sample  flow_diagram.py  main.py  pyproject.toml  read_mu.md  setup.sh  um.md  umc.md  uvicorn_start.sh
agents/src/: simple_agent.py
agents/src/agents/: pipeline.py  ragas_integration.py  schemas.py  simple_agent.py  supervisor.py  test.py  test_message_extractor.py  test_structured_message_exchange.py
agents/src/api/: dependencies.py  models.py  router.py
agents/src/loader/: chroma_client.py  config.py  doc_loader.py  document_processor.py  loader_pipeline.py
agents/src/services/: __init__.py  llm_provider.py
agents/src/services/schemas/: __init__.py  llm_schemas.py
agents/src/utils/: llm_utils.py  logging_config.py  mcp_utils.py
agents/src/ux/: api_client.py  chat_manager.py  chat_ui.py  database.py  main.py  session_manager.py  sidebar_manager.py  ui_components.py
agents/src/validation/: agent_output_processor.py  models.py  ragas_validator.py
agents/tests/: sse_agent.py  test_api_integration.py  test_doc_loader.py  test_embeddings.py  test_ragas_validation.py  test_read_sample_from_vector_db.py  test_simple_agent.py  test_simple_pipeline.py  test_supervisor.py
mcp/: Dockerfile  docker-compose.yml  docker_build.sh  heartbeatchromadb.py  pyproject.toml  um.md
mcp/src/chroma_mcp/: server.py
mcp/tests/: mcp_client.py
